<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Pick a date</string>
    <string name="interest_rate_hint">Enter Interest Rate</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="date_hint">21-Oct-2019</string>
    <string name="note">Write a note or something</string>
    <string name="category">Category</string>
    <string name="category_sample">Food</string>
    <string name="walletName">Wallet Name</string>
    <string name="todays_cost">Todays Cost</string>
    <string name="total_cost">Total Cost</string>
    <string name="new_expense">Add New Expense</string>
    <string name="remaining">Remaining</string>
    <string name="new_wallet">Add New Wallet</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="add_new_wallet">Add New Wallet</string>
    <string name="add_new_budget">Add New Budget</string>
    <string name="wallet_name_hint">Enter Wallet Name</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="select_wallet_type">Select Wallet Type</string>
    <string name="record">Expense</string>
    <string name="income">Income</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="expire">Expires On</string>
    <string name="wallet_type">Wallet Type</string>
    <string name="currency">Currency</string>
    <string name="this_months_activity">This months activity</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="note_hint">Note</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="savings">Savings</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="select_currency">Select Currency</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="input_validation">Please provide data</string>
    <string name="data_saved_successfully">Data Saved Successfully</string>
    <string name="no_data">No Data</string>
    <string name="no_wallet_data">No wallet data available</string>
    <string name="no_budget_data">No record data available</string>
    <string name="please_add_wallet">Please add wallet first \n You dont have any wallet</string>
    <string name="hello">Hello!!</string>
    <string name="current_balance">Current Balance</string>
    <string name="amount_dummy">18000</string>
    <string name="cost">Cost</string>
    <string name="cost_hint">50000</string>
    <string name="balance">Balance</string>
    <string name="balance_hint">20000</string>
    <string name="expiry_date_hint">Expires on Sep 2020</string>
    <string name="check_currency">Please select currency</string>
    <string name="check_wallet">Please select wallet</string>
    <string name="check_your_data">Please check your data</string>
    <string name="data_updated_successfully">Data Updated Successfully</string>
    <string name="select_correct_data">Select Correct Data</string>
    <string name="month_name_sample">January</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="select_your_option">Please select your chocie</string>
    <string name="select_valid_date">Select valid date</string>
    <string name="expense_report">Expense Report</string>
    <string name="wallet_amount_exceeds">Wallet Amount Exceeds</string>
    <string name="welcome">Welcome</string>
    <string name="splash_screen_moto">We have become partners with InterMedCon of Germany to provide IT solutions for health care industries in Europe and around the world!</string>
    <string name="developed_by">Developed By</string>
    <string name="profession">Jr. Mobile Application Developer</string>
    <string name="sakhawat_hossain">Sakhawat Hossain</string>
    <string name="total">Total</string>
    <string name="dummy_total">2580</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="add_new_record">Add New Record</string>
    <string name="records">All Records</string>
    <string name="expense_structure">Expenses/Savings Structure</string>
    <string name="expense_savings_graph">Expense vs Savings Graph</string>
    <string name="coming_soon">Interesting things are coming soon</string>
    <string name="monthly_expense_chart">Monthly Expense Chart</string>
    <string name="food">Food</string>
    <string name="test">Test</string>
    <string name="date_title">Date</string>
    <string name="select_record_type">Select record type</string>
    <string name="select_record_type_error_message">Please select record type</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_remaining">Total Remaining</string>
    <string name="yearly_cost_chart">Yearly cost chart</string>
    <string name="all_your_expense_details">Expense Summary</string>
    <string name="yearly_structure">Yearly Structure</string>
    <string name="yearly_record_graph">Yearly Record Graph</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_savings">Total Savings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="want_to_add_savings_wallet">Do you want to add savings wallet?</string>
    <string name="need_to_add_savings_wallet">You need to add a savings wallet first.</string>
    <string name="need_to_add_expense_wallet">You need to have at least one expense wallet.</string>
    <string name="want_to_add_expense_wallet">Do you want to add an expense wallet?</string>
    <string name="need_to_add_wallet">You dont have any wallet.Please add wallet first.</string>
    <string name="want_to_add_wallet">Do you want to add wallet?</string>
    <string name="expense">Expense</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_chart_data_available">No chart data available</string>
    <string name="monthly_savings_chart">Monthly Savings Chart</string>
    <string name="all_record_report">All Record Report</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="no_data_available">No data available</string>
    <string name="company_at">Save The Children in Bangladesh</string>
    <string name="contact_info">Contact Info</string>
    <string name="email">shakil.py@gmail.com</string>
    <string name="coming">Coming</string>
    <string name="soon">Soon</string>
    <string name="stay_tuned">Stay Tuned</string>
    <string name="record_shot_details">Record short details</string>
    <string name="dummy_text">Loren ipsum</string>
    <string name="record_type">Record Type</string>
    <string name="expense_date">Expense Date</string>
    <string name="loading">Loading</string>
    <string name="update_wallet_information">Update Wallet information</string>
    <string name="delete_wallet_information">Delete Wallet information</string>
    <string name="update_wallet_information_details">You are going to update wallet details.</string>
    <string name="want_to_update_wallet">Do you want to update wallet information?</string>
    <string name="delete">Delete</string>
    <string name="your_notes">Your Notes</string>
    <string name="note_title">Note Title</string>
    <string name="description">The optimal sizes are 1080 pixels wide by 566 pixels to 1350 pixels high. The maximum Instagram resolution is 1080 pixels wide. Un-square shapes were added for Instagram ads.</string>
    <string name="no_notes">No notes</string>
    <string name="add_new_notes_hint">You can try writting the first one</string>
    <string name="create_note">Create Notes</string>
    <string name="new_note">New Note</string>
    <string name="icon_click_listen">Click the icon to listen</string>
</resources>
