<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/md_white_1000"
    android:layout_margin="0dp"
    android:translationZ="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/MessageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/md_blue_grey_400"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_info"
                android:layout_marginTop="8dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/DialogMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/md_white_1000"
                android:textSize="16sp"
                android:text="@string/no_wallet_data"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ComingSoonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/coming_soon"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/coming"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/soon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/stay_tuned"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/ComingSoonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CancelButton"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/md_white_1000"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:textStyle="bold"
                android:background="@drawable/button_shape_round_corner_cancel"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/OkButton"
                android:layout_width="84dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/md_grey_800"
                android:clickable="true"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="@drawable/button_shape_round_corner_ok_coming_soon"
                android:text="@string/ok"
                android:textSize="16sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>