<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutBottomSheet"
    xmlns:tools="http://schemas.android.com/tools"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/md_grey_800">

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/adapter_layout_month_list"
            android:layout_margin="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:background="@color/md_white_1000"
            android:paddingBottom="48dp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_balance"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <in.codeshuffle.typewriterview.TypeWriterView
                android:id="@+id/CurrentBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_800"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/amount_dummy"
                android:gravity="center"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cost"
                        android:gravity="center"
                        android:textColor="@color/md_grey_800"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/TotalCost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_hint"
                        android:gravity="center"
                        android:textColor="@color/md_grey_800"
                        android:textSize="14sp"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="24dp"
                    android:background="@color/md_grey_800"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:gravity="center"
                        android:textColor="@color/md_grey_800"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/Amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/balance_hint"
                        android:gravity="center"
                        android:textColor="@color/md_grey_800"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_expiry_date_new"/>

                <TextView
                    android:id="@+id/ExpiresOn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:text="@string/expiry_date_hint"
                    android:textColor="@color/md_grey_800"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>


</LinearLayout>