<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/md_white_1000"
    android:layout_margin="0dp"
    android:translationZ="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/BasicInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_software_developer"
                android:layout_marginTop="8dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="4dp"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/sakhawat_hossain"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="4dp"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="4dp"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/profession"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_company"
                android:drawablePadding="4dp"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/company_at"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            android:gravity="center|right"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/DialogMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/sakhawat_hossain"/>

            <Button
                android:id="@+id/CancelButton"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/md_white_1000"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:textStyle="bold"
                android:background="@drawable/button_shape_round_corner_cancel"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/OkButton"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="12dp"
                android:textColor="@color/md_white_1000"
                android:clickable="true"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="@drawable/button_shape_round_corner_ok"
                android:text="@string/ok"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>