<androidx.cardview.widget.CardView
    android:id="@+id/cardItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/md_white_1000"
    android:foreground="?attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_family"
            android:padding="4dp"
            app:civ_border_width="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            app:civ_border_color="@color/md_grey_600"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:ellipsize="end"
                android:textSize="14sp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/type"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/ExpenseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:text="@string/date_hint"/>

        </LinearLayout>

        <TextView
            android:id="@+id/Amount"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.0$"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
